--- a/site.html
+++ b/site.html
@@ -1,14 +1,13 @@
-<!DOCTYPE>
 <html>
    <header>
        <link rel="stylesheet" href="styles.css" media="all"/>
    </header>
    <body>
-     <div class="title">
+      <div class="title">
          <article class="opening-article ">
                <h1>Christian Drake</h1>
                <span class="introduction">
-                     <h4 id="intro-statement"> I am a student at Lander University currently a senior in software development. </h4>
+                     <h4 id="intro-statement"> I am a student at lander university currently a senior in software development. </h4>
                </span>
                <button class="btn btn-learn">
                      Learn More 
@@ -16,6 +15,5 @@
          </article>
          
       </div>
-     
    </body>
 </html>
