--- a/site.html
+++ b/site.html
@@ -5,7 +5,7 @@
    <body>
       <div class="title">
          <article class="opening-article ">
-               <h1>Christian Drake</h1>
+               <h1 id="heading-one">Christian Drake</h1>
                <span class="introduction">
                      <h4 id="intro-statement"> I am a student at lander university currently a senior in software development. </h4>
                </span>
