--- a/site.html
+++ b/site.html
@@ -1,6 +1,6 @@
 <html>
    <header>
-       <link rel="stylesheet" href="styles.css" media="all"/>
+       <link rel="stylesheet" href="styles/style.css" media="all"/>
    </header>
    <body>
       <div class="title">
