--- a/site.html
+++ b/site.html
@@ -3,7 +3,7 @@
        <link rel="stylesheet" href="styles/style.css" media="all"/>
    </header>
    <body>
-      <div class="title">
+      <div class="banner">
          <article class="opening-article ">
                <h1 id="heading-one">Christian Drake</h1>
                <span class="introduction">
