--- a/site.html
+++ b/site.html
@@ -9,9 +9,17 @@
                <span class="introduction">
                      <h4 id="intro-statement"> I am a student at lander university currently a senior in software development. </h4>
                </span>
-               <button class="btn btn-learn">
+               <button class="learn-more">
                      Learn More 
                </button>
+               <div class="content-overlay">
+                  <div class="content-container">
+                        <h3>content</h3>
+                        <button class="close-btn">
+                              Close
+                        </button>
+                  </div>
+               </div>
          </article>
       </div>
    </body>
